--- a/render.yaml
+++ b/render.yaml
@@ -1,7 +1,10 @@
 # render.yaml
 
-buildCommand: |
-  yarn cache clean
-  yarn
-env:
-  NODE_VERSION: 16
+preBuildCommand: |
+  curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.39.0/install.sh | bash
+  export NVM_DIR="$HOME/.nvm"
+  [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"  # This loads nvm
+  [ -s "$NVM_DIR/bash_completion" ] && \. "$NVM_DIR/bash_completion"  # This loads nvm bash_completion
+  nvm install 16
+  nvm use 16
+buildCommand: yarn
