--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js",
-    "dev": "nodemon app.js" 
+    "dev": "nodemon app.js",
+    "preinstall": "nvm install",
+    "prestart": "nvm use"
   },
   "author": "",
   "license": "ISC",
