--- a/render.yaml
+++ b/render.yaml
@@ -1,9 +1,6 @@
 # render.yaml
 
 buildCommand: |
-  export NVM_DIR="$HOME/.nvm"
-  [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"  # This loads nvm
-  [ -s "$NVM_DIR/bash_completion" ] && \. "$NVM_DIR/bash_completion"  # This loads nvm bash_completion
-  nvm install 16
-  nvm use 16
+  npm install -g n
+  n 16
   yarn
