--- a/render.yaml
+++ b/render.yaml
@@ -1,8 +1,9 @@
 # render.yaml
 
 buildCommand: |
-  npm install -g n
-  export N_PREFIX=$HOME/.n
-  source $N_PREFIX/nvm.sh
-  n 16
+  curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.39.1/install.sh | bash
+  export NVM_DIR="$HOME/.nvm"
+  [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"  # This loads nvm
+  nvm install 16
+  nvm use 16
   yarn
