--- a/render.yaml
+++ b/render.yaml
@@ -1,6 +1,10 @@
 # render.yaml
 
 buildCommand: |
-  nvm install
-  nvm use
+  curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.39.1/install.sh | bash
+  export NVM_DIR="$HOME/.nvm"
+  [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"
+  [ -s "$NVM_DIR/bash_completion" ] && \. "$NVM_DIR/bash_completion"
+  nvm install 16
+  nvm use 16
   yarn install
