--- a/package.json
+++ b/package.json
@@ -6,9 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js",
-    "dev": "nodemon app.js",
-    "preinstall": "nvm install",
-    "prestart": "nvm use"
+    "dev": "nodemon app.js"
   },
   "author": "",
   "license": "ISC",
