--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^4.18.2",
     "fs-extra": "^11.1.1",
     "mssql": "^10.0.1",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "ssl-root-cas": "^1.3.1"
   }
 }
